<resources>
    <string name="app_name">Wake Up</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings"><![CDATA[Settings & Preferences]]></string>
    <string name="title_sections_preferences">Preferences</string>
    <string name="app_name_enabled">Wake Up Enabled</string>
    <string name="app_name_disabled">Wake Up Disabled</string>
    <string name="action_save">Save</string>
    <string name="text_never">never</string>
    <string name="action_enable">Enable wake up</string>
    <string name="action_disable">Disable wake up</string>
    <string name="title_activity_about"><![CDATA[Application & Feedback]]></string>
    <string name="subtitle_about">App info, help and feedback</string>
    <string name="subtitle_settings">Manage preferences and app settings</string>
    <string name="text_version">v.</string>
    <string name="title_community">Wake Up Community</string>
    <string name="subtitle_community">Feedback</string>
    <string name="text_great">Great</string>
    <string name="text_attention">Attention</string>
    <string name="title_list_app">Applications List</string>
    <string name="subtitle_list_app">Choose which applications activate screen</string>
    <string name="title_priority">Notifications Priority</string>
    <string name="title_silent">Silent Mode</string>
    <string name="subtitle_silent">Don\'t turn on screen when silent mode is activated</string>
    <string name="text_priority_0">Default</string>
    <string name="text_priority_1">High</string>
    <string name="text_priority_2">Max</string>
    <string name="text_priority_m1">Low</string>
    <string name="text_priority_m2">Min</string>
    <string name="action_activate_nls">Give Notification Access</string>
    <string name="subtitle_version">Rate Wake Up</string>
    <string name="title_activity_app_list">Application List</string>
    <string name="action_select_all">Select All</string>
    <string name="title_proximity">Proximity Sensor</string>
    <string name="subtitle_proximity">Uses the proximity sensor to determine whether the device is in pocket</string>
    <string name="text_welcome">Welcome</string>
    <string name="text_welcome_msg">Grant access to notifications to the application</string>
    <string name="action_filter">Filter System Apps</string>
    <string name="title_timeout_preferences">Screen Off Timeout</string>
    <string name="text_timeout_0">Default (5 sec)</string>
    <string name="text_timeout_1">15 sec</string>
    <string name="text_timeout_2">30 sec</string>
    <string name="text_timeout_3">1 min</string>
    <string name="text_timeout_4">2 min</string>
    <string name="title_how_to">How to use</string>
    <string name="text_enable_app">Enable your application to begin using it</string>
    <string name="text_make_preferences">Customize as you wish</string>
    <string name="subtitle_make_preferences">Change preferences and give us suggestions</string>
    <string name="name_shortcut">Toggle Wake Up</string>
    <string name="subtitle_priority">The best use is to use the highest level, but some applications like Gmail use the default priority level.</string>
    <string name="title_headset_plug">Headset</string>
    <string name="headset_plug_proximity">Turn on the screen when you insert a headset</string>
    <string name="title_delay_preferences">Wake Up Delay</string>
    <string name="text_delay_0">Default (1 sec)</string>
    <string name="text_delay_1">0 sec</string>
    <string name="text_delay_2">0.5 sec</string>
    <string name="text_delay_3">1.5 sec</string>
    <string name="text_delay_4">2 sec</string>
    <string name="text_info_long_press">Long-press on an app to only change its priorities.</string>
    <string name="title_activity_donation">Help Developer</string>
    <string name="title_translate">Help with translations</string>
    <string name="subtitle_translate">Open a pull request on GitHub</string>
    <string name="donation_coffee">Coffee</string>
    <string name="donation_lunch">Lunch</string>
    <string name="donation_icecream">Ice Cream</string>
    <string name="donation_breakfast">Breakfast</string>
    <string name="text_donate">Make a Donation:</string>
    <string name="error_billing">Billing Error</string>
    <string name="text_thanks">Thanks for support!</string>
    <string name="title_developer">Find out my projects</string>
    <string name="subtitle_wake_up">Same developer, Same Simplicity</string>
    <string name="susbtitle_dev">Make a donation</string>
    <string name="action_disable_nls">Remove Notification Access</string>
    <string name="action_add_shortcut">Add On/Off Shortcut</string>
</resources>
