<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?android:attr/actionBarSize">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@color/secondary_text"
                android:gravity="center_horizontal"
                android:fontFamily="sans-serif-light"
                android:textAllCaps="true"
                android:id="@+id/activity_title"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/app_name"/>
            <ImageView
                android:layout_width="48dp"
                android:layout_height="32dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:alpha="0.54"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:tint="@color/secondary_text"
                android:src="@drawable/ic_action_navigation_more_horiz"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:id="@+id/action_menu"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:id="@+id/card_how_to">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/primary"
                app:cardCornerRadius="3dp"
                app:cardElevation="1dp"
                app:cardPreventCornerOverlap="true"
                android:background="@color/primary"
                android:id="@+id/card_suggestions"
                android:layout_margin="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/nls_how_to">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:text="@string/action_activate_nls"
                                android:textAppearance="?android:attr/textAppearanceListItem" />
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/white"
                                android:alpha="0.54"
                                android:text="@string/text_welcome_msg"/>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/primary_dark"
                            android:alpha="0.5"
                            android:layout_marginRight="8dp"
                            android:layout_marginLeft="8dp"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:text="@string/action_enable" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:alpha="0.54"
                            android:text="@string/text_enable_app"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/primary_dark"
                        android:alpha="0.5"
                        android:layout_marginRight="16dp"
                        android:layout_marginLeft="16dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:text="@string/text_make_preferences" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:alpha="0.54"
                            android:text="@string/subtitle_make_preferences"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card_settings"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="3dp"
                app:cardElevation="1dp"
                app:cardPreventCornerOverlap="true"
                android:animateLayoutChanges="true"
                android:background="@android:color/white"
                android:layout_margin="16dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:background="?attr/selectableItemBackground"
                        android:id="@+id/action_list_app"
                        android:clickable="true">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:text="@string/title_list_app"
                            android:id="@+id/list_app_title" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:text="@string/subtitle_list_app"
                            android:id="@+id/subtitle_list_app"
                            android:layout_below="@+id/list_app_title" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/back_select"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/action_priority">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:text="@string/title_priority"
                            android:id="@+id/priority_title" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:id="@+id/subtitle_priority"
                            android:layout_below="@+id/priority_title" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/back_select"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/action_timeout">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:text="@string/title_timeout_preferences"
                            android:id="@+id/timeout_title" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:id="@+id/subtitle_timeout"
                            android:layout_below="@+id/timeout_title" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/back_select"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/action_delay">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:text="@string/title_delay_preferences"
                            android:id="@+id/delay_title" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:id="@+id/subtitle_delay"
                            android:layout_below="@+id/delay_title" />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/back_select"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/action_silent">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:text="@string/title_silent"
                            android:id="@+id/silent_title"
                            android:layout_toStartOf="@+id/silent_check" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:text="@string/subtitle_silent"
                            android:layout_below="@+id/silent_title"
                            android:id="@+id/textView"
                            android:layout_toStartOf="@+id/silent_check" />
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/silent_check"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="16dp"
                            android:theme="@style/mDialog"/>
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/back_select"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:id="@+id/action_proximity">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/primary_text"
                            android:textAppearance="?android:attr/textAppearanceListItem"
                            android:text="@string/title_proximity"
                            android:id="@+id/proximity_title"
                            android:layout_toStartOf="@+id/proximity_check" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/secondary_text"
                            android:text="@string/subtitle_proximity"
                            android:layout_below="@+id/proximity_title"
                            android:id="@+id/subtitle_proximity"
                            android:layout_toStartOf="@+id/proximity_check" />
                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/proximity_check"
                            android:layout_centerVertical="true"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="16dp"
                            android:theme="@style/mDialog" />
                    </RelativeLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
